--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -87,12 +87,13 @@ aside {
     padding: 1.5rem;
 }
 
-.sidebar-group {
+.sidebar-group, .project-container{
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: 0.5rem;
 }
+
 
 .container-button {
     background: none;
@@ -101,4 +102,15 @@ aside {
 
 button:active {
     color: blue;
+}
+
+#create-project > form {
+    display: flex;
+    flex-direction: column;
+}
+
+dialog {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
