--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,6 +100,42 @@ aside {
     justify-content: space-between;
 }
 
+.main-wrapper {
+    padding: 2vh 2vw;
+}
+
+.todo-container {
+    padding: 1rem 0rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.todo {
+    background-color: blue;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
+    align-items: center;
+    max-height: 3rem;
+}
+
+.todo-description {
+    max-width: 80%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.todo > div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.add-todo {
+
+}
 
 .container-button {
     background: none;
@@ -110,7 +146,7 @@ button:active {
     color: blue;
 }
 
-#create-project > form {
+#create-project > form, #change-project > form {
     display: flex;
     flex-direction: column;
 }
@@ -118,10 +154,25 @@ button:active {
 dialog {
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-51%, -51%);
 }
 
 .project {
     display: flex;
     justify-content: space-between;
+}
+
+#create-todo > form, #edit-todo > form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-row {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+}
+
+textarea {
+    resize: none;
 }
