--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,7 @@ h6 {
 }
 
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -68,7 +69,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2vh 2vw;
+    padding: 1vh 2vw;
     background-color: #B0D7FF;
 }
 
@@ -87,7 +88,9 @@ aside {
     padding: 1.5rem;
 }
 
-.sidebar-group, .project-container, .collection-container{
+.sidebar-group,
+.project-container,
+.collection-container {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -99,6 +102,12 @@ aside {
     align-items: stretch;
     justify-content: space-between;
 }
+
+.collection-container {
+    align-self: stretch;
+    align-items: stretch;
+}
+
 
 
 .main-wrapper {
@@ -113,7 +122,9 @@ aside {
 }
 
 .todo {
-    background-color: blue;
+    background-color: #EBE9EC;
+    border-radius: 16px;
+    box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.45);
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 1rem;
@@ -128,22 +139,65 @@ aside {
     overflow: hidden;
 }
 
-.todo > div {
+.todo>div {
     display: flex;
     align-items: center;
     gap: 1rem;
 }
 
+button {
+    padding: 4px 16px;
+    background-color: #B0D7FF;
+    border: none;
+    border-radius: 8px;
+}
+
+button:hover {
+    filter: brightness(0.9);
+}
+
 .container-button {
+    padding: 4px 8px;
     background: none;
     border: none;
+    flex-grow: 1;
+    text-align: start;
 }
 
-button:active {
-    color: blue;
+.project-edit-button,
+.edit-todo {
+    background-color: lightgreen;
 }
 
-#create-project > form, #change-project > form {
+.project-delete-button,
+.delete-todo {
+    background-color: lightcoral;
+}
+
+.util-container {
+    display: flex;
+    gap: 8px;
+}
+
+.project,
+.collection {
+    padding: 4px 8px;
+    border-radius: 1rem;
+}
+
+.collection>button {
+    width: 100%;
+}
+
+
+.project:hover,
+.collection:hover {
+    background-color: #B0D7FF;
+}
+
+
+#create-project>form,
+#change-project>form {
     display: flex;
     flex-direction: column;
 }
@@ -159,7 +213,7 @@ dialog {
     justify-content: space-between;
 }
 
-#create-todo > form, #edit-todo > form {
+form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -176,4 +230,10 @@ textarea {
 
 .checked {
     text-decoration: line-through;
+}
+
+dialog {
+    border: none;
+    border-radius: 16px;
+    padding: 2rem 2rem;
 }
